feature (new | creacion del hack 3)

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/reset.css">
     <title>H-3</title>
 </head>
 <body>
-    
+    <section>
+        <div id="rojo"></div>
+        <div id="azul"></div>
+        <div id="line"></div>
+    </section>
+
+    <section class="contenedor-flex">
+        <div class="caja">.</div>
+        <div class="caja">.</div>
+    </section>
+
+    <div id="line2"></div>
+
+    <section class="contenedor-flex2">
+        <div class="caja2">.</div>
+        <div class="caja2">.</div>
+    </section>
+
+    <div class="footer"></div>
 </body>
 </html>
